<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/back"
    android:layout_height="match_parent"
    tools:context=".Task_AddTask">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatTo"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:textColor="@color/greeny"
            android:fontFamily="serif-monospace"
            />

        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textColorHighlight="@android:color/darker_gray"
            android:fontFamily="sans-serif-condensed"
            android:inputType="textCapSentences"
            android:background="@drawable/rect_black"
            >
            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/dueDate"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_my_calendar"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textColorHighlight="@android:color/darker_gray"
            android:fontFamily="sans-serif-condensed"
            android:background="@drawable/rect_black"
            android:onClick="pickDate"/>

        <EditText
            android:id="@+id/add_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:gravity="top"
            android:ems="10"
            android:hint="@string/body"
            android:fontFamily="serif"
            android:textColor="@android:color/black"
            android:textAlignment="gravity"
            android:inputType="textMultiLine|textCapSentences"
            android:background="@drawable/rect_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rect_red"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/cancel"
                android:onClick="Cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rect_green"
                android:textColor="@color/greeny"
                android:text="@string/save"
                android:onClick="Save"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>