<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:background="@color/back"
    android:padding="@dimen/create_padding"
    tools:context=".User_SignUp">


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/email_height"
        android:hint="@string/email"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorHighlight="@android:color/darker_gray"
        android:paddingTop="@dimen/email_padding"
        android:paddingBottom="@dimen/email_padding"
        android:paddingRight="@dimen/email_padding_side"
        android:paddingLeft="@dimen/email_padding_side"
        android:background="@drawable/rect_black" >
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/email_height"
        android:hint="@string/password"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorHighlight="@android:color/darker_gray"
        android:paddingTop="@dimen/email_padding"
        android:paddingBottom="@dimen/email_padding"
        android:paddingRight="@dimen/email_padding_side"
        android:paddingLeft="@dimen/email_padding_side"
        android:background="@drawable/rect_black">
    </EditText>
    <CheckBox
        android:id="@+id/showPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_pwd" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/createAccount"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_green"
        android:fontFamily="monospace"
        android:onClick="newAccount"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding"
        android:text="@string/createAccount"
        android:textAlignment="center"
        android:textSize="@dimen/login_size"/>
</LinearLayout>